<resources>
    <string name="app_name">KuizyJava-PBO2024</string>
    <string name="logo">Logo</string>
    <string name="pintar_bersama_kuizy">Pintar Bersama Kuizy</string>
    <string name="mulai">Mulai</string>
    <string name="kuizy_adalah_aplikasi_quis_yang_diciptakan_untuk_memberikan_test_kepada_para_siswa_sebelum_masuk_ke_dalam_aplikasi_harap_register_terlebih_dahulu">Kuizy adalah aplikasi quis yang diciptakan untuk memberikan test kepada para siswa. Sebelum masuk ke dalam aplikasi, harap register terlebih dahulu.</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="silahkan_login_terlebih_dahulu">Silahkan login terlebih dahulu</string>
    <string name="title_activity_beranda">BerandaActivity</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="silahkan_buat_akun_terlebih_dahulu">Silahkan buat akun terlebih dahulu</string>
    <string name="buat_akun_uppercase">BUAT AKUN</string>
    <string name="profile">profile</string>
    <string name="beranda">Beranda</string>
    <string name="menu">Menu</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mulaiquiz">MulaiQuiz</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="kuizy">Kuizy</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="hasil_akhir">Hasil Akhir</string>
    <string name="aktivitas_terakhir">Aktivitas Terakhir</string>
    <string name="_1_kuis_menampilkan_soal_dan_jawaban_secara_acak_n_n2_jawaban_benar_mendapat_10_poin_salah_mendapat_0_poin_n_n3_level_naik_dengan_exp_point_yang_memiliki_batasan_tertentu_n_n4_exp_point_diperoleh_dari_jumlah_jawaban_benar_semakin_sering_menjawab_benar_semakin_banyak_exp_point_n_n5_hasil_kuis_disimpan_pada_aktivitas_terakhir">1. Kuis menampilkan soal dan jawaban secara acak.\n\n2. Jawaban benar mendapat 10 poin, salah mendapat 0 poin.\n\n3. Level naik dengan exp point yang memiliki batasan tertentu.\n\n4. Exp point diperoleh dari jumlah jawaban benar. Semakin sering menjawab benar, semakin banyak exp point.\n\n5. Hasil kuis disimpan pada aktivitas terakhir.</string>
</resources>