<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1B4B"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-46dp">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subText" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/buat_akun_uppercase"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/silahkan_buat_akun_terlebih_dahulu"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subText" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subText" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/buat_akun"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        tools:ignore="InOrMmUsage" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subText" />

    <TextView
        android:id="@+id/smallText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/belum_punya_akun"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/smallText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/smallText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="5dp"
        android:text="@string/login"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:onClick="onLoginClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/smallText1"
        app:layout_constraintTop_toTopOf="@id/smallText1" />

</androidx.constraintlayout.widget.ConstraintLayout>