<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1B4B"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="42mm"
        android:layout_height="42mm"
        android:layout_marginTop="20mm"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="75mm"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="InOrMmUsage,VisualLintBounds" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/pintar_bersama_kuizy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/kuizy_adalah_aplikasi_quis_yang_diciptakan_untuk_memberikan_test_kepada_para_siswa_sebelum_masuk_ke_dalam_aplikasi_harap_register_terlebih_dahulu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subText"
        tools:ignore="VisualLintLongText" />

    <Button
        android:id="@+id/button_welcome"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="10mm"
        android:text="@string/mulai"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="InOrMmUsage" />



</androidx.constraintlayout.widget.ConstraintLayout>
